--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Parent</title>
 </head>
 <body>
     <h1>Parent</h1>
+    <iframe src="https://site-works.gitlab.io/poc-crossite-child" frameborder="0"></iframe>
+    <script>
+        console.log(1)
+
+    </script>
 </body>
 </html>
