--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <iframe src="https://site-works.gitlab.io/poc-crossite-child" frameborder="0"></iframe>
     <script>
         console.log(1)
-        window.addEventListener('spockeeAddProduct', (event) => {
+        window.document.addEventListener('spockeeAddProduct', (event) => {
 
             const {detail} = event
 
