--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
     <iframe src="https://site-works.gitlab.io/poc-crossite-child" frameborder="0"></iframe>
     <script>
         console.log(1)
-        var receiveMessage = function(event) {
-            console.log("Recieved event " + JSON.stringify(event.data));
+        let receiveMessage = function(event) {
+            console.log("Event data " + JSON.stringify(event.data));
         }
-        window.addEventListener("message", receiveMessage, true);
+        // window.addEventListener("message", receiveMessage, true);
+        window.addEventListener("message", function(e){
+            if(e.origin == "https://site-works.gitlab.io/poc-crossite-child") {
+                receiveMessage(e)
+            } else {
+                return
+            }
+        });
 
         // window.document.addEventListener('spockeeAddProduct', (event) => {
-
         //     const {detail} = event
-
         //     console.log('Spockee add to cart data', detail);
-
         // })
     </script>
 </body>
