--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             } else {
                 return
             }
-        });
+        }, true);
 
         // window.document.addEventListener('spockeeAddProduct', (event) => {
         //     const {detail} = event
